--- a/app/src/main/res/layout/fragment_on_clicked_game.xml
+++ b/app/src/main/res/layout/fragment_on_clicked_game.xml
@@ -18,7 +18,7 @@
 
 
     <ImageView
-        android:id="@+id/dialog_imageView"
+        android:id="@+id/dialog_imageGame"
         android:layout_width="350dp"
         android:layout_height="200dp"
         android:layout_marginTop="10dp"
