--- a/app/src/main/res/layout/fragment_on_clicked_game.xml
+++ b/app/src/main/res/layout/fragment_on_clicked_game.xml
@@ -17,8 +17,8 @@
         android:text="TextView" />
 
 
-    <ImageView
-        android:id="@+id/dialog_imageGame"
+    <WebView
+        android:id="@+id/dialog_webView"
         android:layout_width="350dp"
         android:layout_height="200dp"
         android:layout_marginTop="10dp"
