--- a/app/src/main/res/layout/listgame_item.xml
+++ b/app/src/main/res/layout/listgame_item.xml
@@ -61,8 +61,7 @@
             android:layout_width="150dp"
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/minus_logo" />
+            android:layout_marginTop="5dp" />
     </LinearLayout>
 
     <TextView
