--- a/app/src/main/res/layout/fragment_gamelist.xml
+++ b/app/src/main/res/layout/fragment_gamelist.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/textView_user"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="left|center"
+                android:gravity="center"
                 android:background="@color/white"
                 android:text="User"
                 android:textColor="@color/black"
@@ -39,15 +39,6 @@
 
 
         </LinearLayout>
-
-        <Button
-            android:id="@+id/btn_logout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Logout"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"/>
-
 
     </LinearLayout>
 
@@ -65,29 +56,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"/>
 
-        <LinearLayout
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="10"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btn_mylist"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="60dp"
-                android:layout_marginLeft="10dp"
-                android:text="My list" />
-
-            <Button
-                android:id="@+id/btn_filter"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="10dp"
-                android:text="Filter" />
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            app:menu="@menu/buttom_nav_menu"/>
 
     </LinearLayout>
 
