--- a/app/src/main/res/layout/listgame_item.xml
+++ b/app/src/main/res/layout/listgame_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
-    android:background="#255E5B5B"
+    android:background="#EAE6EF"
     android:orientation="vertical">
 
 
