--- a/app/src/main/res/layout/fragment_on_clicked_game.xml
+++ b/app/src/main/res/layout/fragment_on_clicked_game.xml
@@ -118,6 +118,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
+        android:textAlignment="center"
         android:text="..." />
 
 </LinearLayout>
